--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   },
   "homepage": "https://github.com/vicasas/create-app#readme",
   "devDependencies": {
+    "@types/gradient-string": "^1.1.2",
     "@types/node": "^18.11.3",
     "@types/prompts": "^2.4.1",
     "chalk": "^5.1.2",
     "commander": "^9.4.1",
+    "gradient-string": "^2.0.2",
     "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "prompts": "^2.4.2",
